@@ -5,13 +5,16 @@ cdrkit (1.0pre3) UNRELEASED; urgency=low
     feature checks (otherwise it would crash when run on any pure CD-ROM
     reader)
   * Added test for WORDS_BIGENDIAN
-  * copied values from align.h to xconfig.h (is there another redundant
-    check&define somewhere, maybe?)
+  * copied values from align.h to another set of sizeof-reflecting defines in
+    xconfig.h
   * workarounds for almost all "you are not allowed to modify that {version
     checking,quality assurance,other-important-looking-wording}" parts,
     replacing the output of "schily" where the commend said that we are forced
     to. One part in cdrecord.c still remains, the comment sounds too dangerous
     to be touched.
+
+  [ Peter Samuelson ]
+  * Created cmake test and code snippet for HAVE_C_BITFIELDS
 
  -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 09:56:38 +0200
 
